--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-use-cart": "^1.13.0",
+    "use-cart": "^1.1.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
