--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-use-cart": "^1.13.0",
+    "sweetalert2": "^11.7.20",
     "use-cart": "^1.1.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
